<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text" />

        <EditText
            android:id="@+id/etIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingredients"
            android:inputType="textMultiLine"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/etSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/steps"
            android:inputType="textMultiLine"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_recipe"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"
            android:textColor="@color/on_primary" />
    </LinearLayout>
</ScrollView>
