<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/primary_variant"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/tvLabelIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:elegantTextHeight="true"
            android:textColor="@color/on_secondary"
            android:text="@string/ingredients"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvLabelSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:elegantTextHeight="true"
            android:textColor="@color/on_secondary"
            android:text="@string/steps"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tvLabelCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:elegantTextHeight="true"
            android:textColor="@color/on_secondary"
            android:text="@string/category"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_recipe"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_recipe"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/primary"/>

    </LinearLayout>
</ScrollView>
